--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^2.9.3",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-add-to-homescreen": "^1.1.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-animated-css": "^1.2.1",
     "react-burger-menu": "^2.6.13",
